[package]
authors = ["Xuanwo <github@xuanwo.io>"]
description = "Retry with backoff without effort."
documentation = "https://docs.rs/backon"
edition = "2021"
license = "Apache-2.0"
name = "backon"
repository = "https://github.com/Xuanwo/backon"
version = "0.4.4"

[dependencies]
fastrand = "2.0.0"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
anyhow = "1"
reqwest = "0.12"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt",
  "sync",
], default-features = false }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = [
  "time",
  "rt",
  "macros",
  "sync",
  "rt-multi-thread",
] }
