[package]
description = "RetryLayer for Tower based on BackON."
documentation = "https://docs.rs/backon-tower"
name = "backon-tower"
rust-version = "1.70"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
backon = "1"
tower = { git = "https://github.com/tower-rs/tower", rev = "7155101" }
# tower = "0.5"
